--- a/app/src/main/res/layout-land/activity_connection.xml
+++ b/app/src/main/res/layout-land/activity_connection.xml
@@ -18,6 +18,7 @@
 
         <com.compass.ux.view.TabNavitationLayout
                 android:id="@+id/tab_change"
+                android:visibility="gone"
                 android:layout_width="@dimen/x230"
                 android:layout_height="@dimen/x41"
                 android:layout_centerHorizontal="true"
@@ -25,6 +26,7 @@
                 android:gravity="center" />
 
         <TextView
+                android:visibility="visible"
                 android:id="@+id/tv_live_url"
                 android:paddingLeft="@dimen/x17"
                 android:paddingRight="@dimen/x17"
@@ -38,8 +40,53 @@
                 android:textColor="@color/colorWhite"
                 android:textSize="@dimen/x17" />
         <TextView
-                android:id="@+id/tv_zoom"
                 android:visibility="visible"
+                android:layout_below="@+id/tv_live_url"
+                android:id="@+id/tv_firmware_version"
+                android:paddingLeft="@dimen/x17"
+                android:paddingRight="@dimen/x17"
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/x41"
+                android:layout_marginTop="@dimen/x21"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="@dimen/x200"
+                android:gravity="center"
+                android:text=""
+                android:textColor="@color/colorWhite"
+                android:textSize="@dimen/x17" />
+        <TextView
+                android:visibility="visible"
+                android:layout_below="@+id/tv_firmware_version"
+                android:id="@+id/tv_remote_firmware_version"
+                android:paddingLeft="@dimen/x17"
+                android:paddingRight="@dimen/x17"
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/x41"
+                android:layout_marginTop="@dimen/x21"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="@dimen/x200"
+                android:gravity="center"
+                android:text=""
+                android:textColor="@color/colorWhite"
+                android:textSize="@dimen/x17" />
+        <TextView
+                android:visibility="visible"
+                android:layout_below="@+id/tv_remote_firmware_version"
+                android:id="@+id/tv_network_rtk_status"
+                android:paddingLeft="@dimen/x17"
+                android:paddingRight="@dimen/x17"
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/x41"
+                android:layout_marginTop="@dimen/x21"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="@dimen/x200"
+                android:gravity="center"
+                android:text="网络RTK状态"
+                android:textColor="@color/colorWhite"
+                android:textSize="@dimen/x17" />
+        <TextView
+                android:id="@+id/tv_zoom"
+                android:visibility="gone"
                 android:layout_width="@dimen/x134"
                 android:layout_height="@dimen/x41"
                 android:layout_alignParentRight="true"
@@ -68,7 +115,7 @@
                 android:textSize="@dimen/x17" />
 
         <TextView
-                android:visibility="gone"
+                android:visibility="visible"
                 android:id="@+id/tv_bind_status"
                 android:paddingLeft="@dimen/x17"
                 android:paddingRight="@dimen/x17"
@@ -84,7 +131,7 @@
                 android:textSize="@dimen/x17" />
 
         <TextView
-                android:visibility="gone"
+                android:visibility="visible"
                 android:id="@+id/tv_account_state"
                 android:paddingLeft="@dimen/x17"
                 android:paddingRight="@dimen/x17"
@@ -100,7 +147,7 @@
                 android:textSize="@dimen/x17" />
 
         <TextView
-                android:visibility="gone"
+                android:visibility="visible"
                 android:id="@+id/tv_LiveVideoFps"
                 android:paddingLeft="@dimen/x17"
                 android:paddingRight="@dimen/x17"
@@ -117,7 +164,7 @@
                 android:textSize="@dimen/x17" />
 
         <RelativeLayout
-                android:visibility="gone"
+                android:visibility="visible"
                 android:layout_below="@+id/tv_appActivation_status"
                 android:layout_alignParentLeft="true"
                 android:layout_marginTop="@dimen/x31"
@@ -131,15 +178,17 @@
 
             <TextView
                     android:id="@+id/tv_rate"
+                    android:visibility="visible"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
                     android:layout_centerVertical="true"
-                    android:text="6"
+                    android:text=""
                     android:textColor="@color/colorWhite"
                     android:textSize="@dimen/x17" />
 
             <ImageView
+                    android:visibility="gone"
                     android:layout_marginRight="@dimen/x2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -149,7 +198,7 @@
         </RelativeLayout>
 
         <RelativeLayout
-                android:visibility="visible"
+                android:visibility="gone"
                 android:id="@+id/layout_sort"
                 android:layout_width="@dimen/x32"
                 android:layout_height="200dp"
@@ -191,6 +240,7 @@
         </RelativeLayout>
 
         <RelativeLayout
+                android:visibility="visible"
                 android:id="@+id/layout_air_info"
                 android:background="@mipmap/biankuang_icon_home"
                 android:layout_marginBottom="@dimen/x58"
@@ -304,15 +354,23 @@
                     android:textSize="@dimen/x15" />
         </RelativeLayout>
     </RelativeLayout>
-
+<com.compass.ux.view.CircleViewByImage
+        android:visibility="gone"
+        android:id="@+id/circle_rocker"
+        android:layout_marginLeft="@dimen/x40"
+        android:layout_marginBottom="@dimen/x26"
+        android:layout_above="@+id/map_widget"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
     <dji.ux.widget.MapWidget
+            android:visibility="visible"
             android:id="@+id/map_widget"
             android:layout_width="125dp"
             android:layout_height="76dp"
             android:layout_alignParentLeft="true"
             android:layout_alignParentBottom="true" />
     <LinearLayout
-            android:visibility="invisible"
+            android:visibility="gone"
             android:id="@+id/layout_map_tools"
             android:orientation="horizontal"
             android:layout_width="@dimen/x200"
@@ -347,6 +405,7 @@
     </LinearLayout>
 
     <LinearLayout
+            android:visibility="visible"
             android:layout_width="match_parent"
             android:layout_height="@dimen/x79"
             android:background="#60000000"
