--- a/app/src/main/res/layout/activity_connection.xml
+++ b/app/src/main/res/layout/activity_connection.xml
@@ -18,6 +18,7 @@
 
         <com.compass.ux.view.TabNavitationLayout
                 android:id="@+id/tab_change"
+                android:visibility="gone"
                 android:layout_width="@dimen/x230"
                 android:layout_height="@dimen/x41"
                 android:layout_centerHorizontal="true"
@@ -25,6 +26,7 @@
                 android:gravity="center" />
 
         <TextView
+                android:visibility="visible"
                 android:id="@+id/tv_live_url"
                 android:paddingLeft="@dimen/x17"
                 android:paddingRight="@dimen/x17"
@@ -37,9 +39,39 @@
                 android:text=""
                 android:textColor="@color/colorWhite"
                 android:textSize="@dimen/x17" />
-
+        <TextView
+                android:visibility="visible"
+                android:layout_below="@+id/tv_live_url"
+                android:id="@+id/tv_firmware_version"
+                android:paddingLeft="@dimen/x17"
+                android:paddingRight="@dimen/x17"
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/x41"
+                android:layout_marginTop="@dimen/x21"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="@dimen/x200"
+                android:gravity="center"
+                android:text=""
+                android:textColor="@color/colorWhite"
+                android:textSize="@dimen/x17" />
+        <TextView
+                android:visibility="visible"
+                android:layout_below="@+id/tv_firmware_version"
+                android:id="@+id/tv_remote_firmware_version"
+                android:paddingLeft="@dimen/x17"
+                android:paddingRight="@dimen/x17"
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/x41"
+                android:layout_marginTop="@dimen/x21"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="@dimen/x200"
+                android:gravity="center"
+                android:text=""
+                android:textColor="@color/colorWhite"
+                android:textSize="@dimen/x17" />
         <TextView
                 android:id="@+id/tv_zoom"
+                android:visibility="gone"
                 android:layout_width="@dimen/x134"
                 android:layout_height="@dimen/x41"
                 android:layout_alignParentRight="true"
@@ -52,6 +84,7 @@
                 android:textSize="@dimen/x17" />
 
         <TextView
+                android:visibility="gone"
                 android:id="@+id/tv_appActivation_status"
                 android:paddingLeft="@dimen/x17"
                 android:paddingRight="@dimen/x17"
@@ -67,6 +100,7 @@
                 android:textSize="@dimen/x17" />
 
         <TextView
+                android:visibility="visible"
                 android:id="@+id/tv_bind_status"
                 android:paddingLeft="@dimen/x17"
                 android:paddingRight="@dimen/x17"
@@ -82,6 +116,7 @@
                 android:textSize="@dimen/x17" />
 
         <TextView
+                android:visibility="visible"
                 android:id="@+id/tv_account_state"
                 android:paddingLeft="@dimen/x17"
                 android:paddingRight="@dimen/x17"
@@ -97,6 +132,7 @@
                 android:textSize="@dimen/x17" />
 
         <TextView
+                android:visibility="gone"
                 android:id="@+id/tv_LiveVideoFps"
                 android:paddingLeft="@dimen/x17"
                 android:paddingRight="@dimen/x17"
@@ -113,6 +149,7 @@
                 android:textSize="@dimen/x17" />
 
         <RelativeLayout
+                android:visibility="gone"
                 android:layout_below="@+id/tv_appActivation_status"
                 android:layout_alignParentLeft="true"
                 android:layout_marginTop="@dimen/x31"
@@ -126,6 +163,7 @@
 
             <TextView
                     android:id="@+id/tv_rate"
+                    android:visibility="gone"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
@@ -135,6 +173,7 @@
                     android:textSize="@dimen/x17" />
 
             <ImageView
+                    android:visibility="gone"
                     android:layout_marginRight="@dimen/x2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -144,6 +183,7 @@
         </RelativeLayout>
 
         <RelativeLayout
+                android:visibility="gone"
                 android:id="@+id/layout_sort"
                 android:layout_width="@dimen/x32"
                 android:layout_height="200dp"
@@ -185,6 +225,7 @@
         </RelativeLayout>
 
         <RelativeLayout
+                android:visibility="visible"
                 android:id="@+id/layout_air_info"
                 android:background="@mipmap/biankuang_icon_home"
                 android:layout_marginBottom="@dimen/x58"
@@ -298,15 +339,58 @@
                     android:textSize="@dimen/x15" />
         </RelativeLayout>
     </RelativeLayout>
-
+    <com.compass.ux.view.CircleViewByImage
+            android:visibility="gone"
+            android:id="@+id/circle_rocker"
+            android:layout_marginLeft="@dimen/x40"
+            android:layout_marginBottom="@dimen/x26"
+            android:layout_above="@+id/map_widget"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
     <dji.ux.widget.MapWidget
+            android:visibility="visible"
             android:id="@+id/map_widget"
-            android:layout_width="@dimen/x257"
-            android:layout_height="@dimen/x154"
+            android:layout_width="125dp"
+            android:layout_height="76dp"
             android:layout_alignParentLeft="true"
             android:layout_alignParentBottom="true" />
+    <LinearLayout
+            android:visibility="gone"
+            android:id="@+id/layout_map_tools"
+            android:orientation="horizontal"
+            android:layout_width="@dimen/x200"
+            android:layout_alignParentRight="true"
+            android:layout_marginTop="@dimen/x111"
+            android:layout_marginRight="@dimen/x41"
+            android:gravity="center"
+            android:layout_height="wrap_content">
+        <ImageView
+                android:id="@+id/iv_exclamatory"
+                android:background="@mipmap/icon_exclamatory"
+                android:layout_width="@dimen/x38"
+                android:layout_height="@dimen/x38"/>
+        <ImageView
+                android:id="@+id/iv_aircraft_position"
+                android:layout_marginLeft="@dimen/x14"
+                android:background="@mipmap/icon_aircraft_position"
+                android:layout_width="@dimen/x38"
+                android:layout_height="@dimen/x38"/>
+        <ImageView
+                android:id="@+id/iv_mode_switching"
+                android:layout_marginLeft="@dimen/x14"
+                android:background="@mipmap/icon_mode_switching"
+                android:layout_width="@dimen/x38"
+                android:layout_height="@dimen/x38"/>
+        <ImageView
+                android:id="@+id/iv_clear_track"
+                android:layout_marginLeft="@dimen/x14"
+                android:background="@mipmap/icon_clear_track"
+                android:layout_width="@dimen/x38"
+                android:layout_height="@dimen/x38"/>
+    </LinearLayout>
 
     <LinearLayout
+            android:visibility="visible"
             android:layout_width="match_parent"
             android:layout_height="@dimen/x79"
             android:background="#60000000"
@@ -319,19 +403,19 @@
                 android:background="@mipmap/icon_logo" />
 
         <View
-                android:layout_width="1dp"
+                android:layout_width="0.3dp"
                 android:layout_height="25dp"
                 android:layout_marginLeft="@dimen/x35"
                 android:layout_marginRight="@dimen/x35"
-                android:background="@color/button_normal" />
+                android:background="@color/white" />
 
         <com.compass.ux.view.CustomizedPreFlightWidget
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
 
         <com.compass.ux.view.CustomizeFlightModeWidget
-                android:layout_marginLeft="@dimen/x90"
-                android:layout_width="90dp"
+                android:layout_marginLeft="@dimen/x80"
+                android:layout_width="100dp"
                 android:layout_height="22dp" />
 
         <dji.ux.widget.GPSSignalWidget
@@ -352,10 +436,10 @@
                 android:layout_width="60dp"
                 android:layout_height="22dp" />
 
-        <dji.ux.widget.BatteryWidget
-                android:layout_width="wrap_content"
+        <com.compass.ux.view.BatteryWidget
+                android:layout_width="96dp"
                 android:layout_height="22dp"
-                custom:excludeView="singleVoltage" />
+                />
 
     </LinearLayout>
 
